@@ -1,5 +1,12 @@
 2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	bug #38023: avrdude doesn't return an error code when attempting
+	to upload an invalid Intel HEX file
+	* fileio.c (ihex2b): Turn the "No end of file record found" warning
+	into an error if no valid record was found at all.
+
+2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	Submitted by Claus-Justus Heine:
 	bug #38713: Compilation of the documentation breaks with texinfo-5
 	* doc/avrdude.texi: Turn @itemx into @item, add @headitem to STK600
